# python-genai

./: .env  README.md  main.py  pyproject.toml  requirements.txt
src/: __init__.py
src/genai/chatbots/: __init__.py  base.py  chatbot.py  factory.py  rag.py  standard.py
src/genai/config/: prompts.py  settings.py
src/genai/core/: __init__.py
src/genai/core/connectors/: __init__.py  ai_provider.py  azure_search.py  http_connector.py  vector_store.py
src/genai/core/processing/: __init__.py  document.py  ingestion.py
src/genai/core/processing/chunking/: chunking.py
src/genai/rag/: __init__.py  embedder.py  retriever.py
src/genai/utils/: __init__.py  di.py  metrics.py
src/prompts/: __init__.py  prompt_templates.py
tests/: test_chunking.py
